name:                hsmisc
version:             1.0
cabal-version:       >= 1.8
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2014 Dino Morelli
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
stability:           experimental
homepage:            http://foo/bar/baz.html
synopsis:            A collection of miscellaneous modules
description:         Some Haskell source code that proved to be useful in various projects. These span a range of tasks from monadic actions to simple config file loading to timestamps for logging and helpers for parsec.
category:            Configuration, Logging, Monads, Parsing
tested-with:         GHC >= 7.6.3
extra-source-files:  changelog.md
                     doc/dev/notes
                     README.md
                     testsuite/*.hs
                     TODO
--                     [things not under vcs]

--source-repository    head
--   type:             darcs
--   location:         URL

library
   exposed-modules:  HsMisc.Control.Monad.Error
                     HsMisc.Control.Monad.MonadOr
                     HsMisc.Data.SimpleConf
                     HsMisc.Data.TimeStamp
                     HsMisc.Parsec.Char
   hs-source-dirs:   src
   build-depends:    base >= 3 && < 5,
                     containers,
                     mtl,
                     old-locale,
                     parsec,
                     regex-compat,
                     time
   ghc-options:      -Wall

test-suite           test-hsmisc
   type:             exitcode-stdio-1.0
   main-is:          test-hsmisc.hs
   hs-source-dirs:   src testsuite
   build-depends:    base >= 3 && < 5,
                     containers,
                     HUnit,
                     mtl,
                     regex-compat
   ghc-options:      -Wall
