name:                hsmisc
version:             1.3
cabal-version:       >= 1.8
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2014-2015 Dino Morelli
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
stability:           experimental
homepage:            http://hub.darcs.net/dino/hsmisc
synopsis:            A collection of miscellaneous modules
description:         Some Haskell source code that proved to be useful in various projects.
category:            Logging, Monads, Parsing
tested-with:         GHC >= 8.0.1
extra-source-files:  .gitignore
                     changelog.md
                     doc/dev/notes
                     README.md
                     stack.yaml
                     testsuite/*.hs
                     TODO.md
                     util/gentags.sh

source-repository    head
   type:             git
   location:         https://github.com/dino-/hsmisc.git

library
   exposed-modules:  HsMisc.Control.Monad.Except
                     HsMisc.Control.Monad.MonadOr
                     HsMisc.Data.TimeStamp
                     HsMisc.Parsec.Char
   hs-source-dirs:   src
   build-depends:    base >= 3 && < 5,
                     containers,
                     mtl,
                     old-locale,
                     parsec,
                     time
   ghc-options:      -Wall

test-suite           test-hsmisc
   type:             exitcode-stdio-1.0
   main-is:          test-hsmisc.hs
   hs-source-dirs:   src testsuite
   build-depends:    base >= 3 && < 5,
                     containers,
                     HUnit,
                     mtl
   ghc-options:      -Wall
   other-modules:    Except
                     HsMisc.Control.Monad.Except
                     HsMisc.Control.Monad.MonadOr
                     MonadOr
